[package]
name = "castor"
version = "0.3.1"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
license = "ISC"
keywords = ["content-addressable", "storage", "database", "lmdb"]
documentation = "https://docs.rs/castor"
repository = "https://github.com/zshipko/castor"
description = "Content addressable storage backed by LMDB"

[dependencies]
kv = "0.6"
sha2 = "0.7"
