[package]
name = "castor"
version = "0.4.1"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
license = "ISC"
keywords = ["content-addressable", "storage", "database", "lmdb"]
documentation = "https://docs.rs/castor"
repository = "https://github.com/zshipko/castor"
description = "Content addressable storage backed by LMDB"
edition = "2018"

[dependencies]
kv = "0.8"
digest = "0.8"
sha2 = {version = "0.8", optional = true}
sha3 = {version = "0.8", optional = true}
blake2 = {version = "0.8", optional = true}

[features]
default=["blake2s"]
sha2_256=["sha2"]
sha2_512=["sha2"]
sha3_256=["sha3"]
sha3_512=["sha3"]
blake2b=["blake2"]
blake2s=["blake2"]
